@@ -1,7 +1,18 @@
 changelog:
 ------------
 
+(june 2020)
+cleap-0.3.3:
+    - updated to sm_60
 
+
+
+(2018)
+cleap-0.3.2:
+    - updated to sm_30
+
+
+(2011)
 cleap-0.3.1:
 
 	BUG FIXES:
